msa-auth-server/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: msa-auth-server
  name: msa-auth-server
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    run: msa-auth-server
  type: ClusterIP
  #type: ExternalName
  #externalName: msa-zuul-server.msasmp01.svc.cluster.local
