msa-auth-server/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  generation: 1
  labels:
    run: msa-auth-server
  name: msa-auth-server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: msa-auth-server
  template:
    metadata:
      labels:
        run: msa-auth-server
    spec:
      containers:
      - image: 192.168.100.102:5000/msasmp01/msa-auth-server:1.0
        imagePullPolicy: Always
        name: msa-auth-server
        ports:
        - containerPort: 9080
          protocol: TCP
      restartPolicy: Always


---

apiVersion: v1
kind: Service
metadata:
  labels:
    run: msa-auth-server
  name: msa-auth-server
spec:
  ports:
  - port: 9080
    protocol: TCP
    targetPort: 9080
  selector:
    run: msa-auth-server
  type: ClusterIP
  #type: ExternalName
  #externalName: msa-zuul-server.msasmp01.svc.cluster.local


---

apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: msa-auth-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: auth.msasmp01.com
    http:
      paths:
      - path: /
        backend:
          serviceName: msa-auth-server
          servicePort: 9080
